--- a/final_project.Rmd
+++ b/final_project.Rmd
@@ -6,69 +6,34 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 library(tidyverse)
 library(dplyr)
 library(haven)
 library(ggplot2)
+library(knitr)
 
 raw_data <- read_sav("~/Desktop/data/DS0001/33968-0001-Data.sav")
-
-View(raw_data)
 ```
 
+## Types of Infant Centers
 ```{r}
-quality_social_dev_12 <- raw_data %>%
-  select(ICPSR_CHILDID, I_OVERALL_12, ASQSCORE_12) %>%
-  filter(!is.na(I_OVERALL_12), !is.na(ASQSCORE_12)) %>%
-  group_by(ICPSR_CHILDID) %>%
-  ggplot(aes(x = I_OVERALL_12, y = ASQSCORE_12)) + 
-  geom_line()
+types_centers <- raw_data %>%
+  select(TYPEOFCTER_12) %>%
+  filter(!is.na(TYPEOFCTER_12)) %>%
+  mutate(TYPEOFCTER_12 = as.character(TYPEOFCTER_12),
+         TYPEOFCTER_12 = fct_recode(TYPEOFCTER_12, "Large childcare-only organization" = "1",
+                                "Large multi-service (inc. childcare) organization" = "2")) %>%
+  count(TYPEOFCTER_12) %>%
+  spread(TYPEOFCTER_12, n) %>%
+  kable(caption = "This study examined a greater number of child-care only organizations than multi-service organizations. No single-site childcare organizations were examined.")
 
-quality_social_dev_12
+types_centers
+```
 
-gender_social_dev_12 <- raw_data %>%
-  select(ICPSR_CHILDID, GENDER_12, ASQSCORE_12) %>%
-  filter(!is.na(GENDER_12)) %>%
-  mutate(GENDER_12 = as.character(GENDER_12),
-         GENDER_12 = fct_recode(GENDER_12, "Female" = "1",
-                                "Male" = "2")) %>%
-  group_by(ICPSR_CHILDID) %>%
-  ggplot(aes(x = GENDER_12, y = ASQSCORE_12)) + 
-  geom_boxplot() + 
-  labs(title = "Gender Has No Significant Impact on Social Development at 12 Months of Age", 
-       x = "Gender",
-       y = "ASQ Score of Social Development")
-
-gender_social_dev_12
-
-dep_social_dev_12 <- raw_data %>%
-  select(ICPSR_CHILDID, DEPRESSION_12, GENDER_12, ASQSCORE_12) %>%
-  filter(!is.na(GENDER_12)) %>%
-  mutate(GENDER_12 = as.character(GENDER_12),
-         GENDER_12 = fct_recode(GENDER_12, "Female" = "1",
-                                "Male" = "2")) %>%
-  group_by(ICPSR_CHILDID) %>%
-  ggplot(aes(x = DEPRESSION_12, y = ASQSCORE_12, color = GENDER_12)) + 
-  geom_point() +
-  scale_color_manual(values = c("pink", "blue"))
- # labs(title = "Gender Has No Significant Impact on Social Development at 12 Months of Age", 
-      # x = "Gender",
-       #y = "ASQ Score of Social Development")
-
-dep_social_dev_12
-
-View(quality_social_dev_12)
-
-  group_by(ICPSR_CHILDID) %>%
-  ggplot(aes(x = I_OVERALL_12, y = ASQSCORE_12)) + 
-  geom_point()
-
-quality_social_dev_12
-``` 
-
+## Infant Center Quality vs. Family Income
 ```{r}
-raw.data %>%
+income_i_overall_12 <- raw_data %>%
   select(ICPSR_CHILDID, INCOMGROUP_12, I_OVERALL_12) %>%
   filter(!is.na(INCOMGROUP_12)) %>%
   mutate(INCOMGROUP_12 = as.character(INCOMGROUP_12),
@@ -81,17 +46,101 @@ raw.data %>%
   labs(title = "Overall Infant Center Quality Improves with Income Level",
        x = "Family Income Category",
        y = "Infant/Toddler Environment Rating Scale (ITERS) Score")
+
+income_i_overall_12
 ```
 
-
-workspace
+## Social Development vs. Maternal Depression
 ```{r}
-  select(ICPSR_CHILD_ID, INCM24, BITSYTOTAL_24, YSAGE24) %>%
-  filter(ICPSR_CHILD_ID <= 242) %>%
-  
-  
-  
-mother.data <- raw.data %>%
-  select(EDUCAT_PK, WORKSTRES_PK, 
+dep_social_dev_12 <- raw_data %>%
+  select(ICPSR_CHILDID, DEPRESSION_12, GENDER_12, ASQSCORE_12) %>%
+  filter(!is.na(GENDER_12)) %>%
+  mutate(GENDER_12 = as.character(GENDER_12),
+         GENDER_12 = fct_recode(GENDER_12, "Female" = "1",
+                                "Male" = "2")) %>%
+  group_by(ICPSR_CHILDID) %>%
+  ggplot(aes(x = DEPRESSION_12, y = ASQSCORE_12, color = GENDER_12)) + 
+  geom_point() +
+  scale_color_manual(values = c("pink", "blue")) +
+  labs(title = "No Spike in Behavioral Problems at Higher Level of Maternal Depression 
+       at 12 Months", 
+       x = "Maternal Depression",
+       y = "ASQ Score of Social Development", 
+       color = "Gender")
+
+dep_social_dev_12
+``` 
+
+## Social Development vs. Gender
+```{r}
+gender_social_dev_12 <- raw_data %>%
+  select(ICPSR_CHILDID, GENDER_12, ASQSCORE_12) %>%
+  filter(!is.na(GENDER_12)) %>%
+  mutate(GENDER_12 = as.character(GENDER_12),
+         GENDER_12 = fct_recode(GENDER_12, "Female" = "1",
+                                "Male" = "2")) %>%
+  group_by(ICPSR_CHILDID) %>%
+  ggplot(aes(x = GENDER_12, y = ASQSCORE_12)) + 
+  geom_boxplot() + 
+  labs(title = "Gender Has No Significant Impact on Social Development at 12 Months", 
+       x = "Gender",
+       y = "ASQ Score of Social Development")
+
+gender_social_dev_12
 ```
+
+## Social Development vs. Home Environment Stimulation
+```{r}
+homestim_social_dev_24 <- raw_data %>%
+  select(ICPSR_CHILDID, HOMESTIM_24, ASQTOTAL_24, INCM24) %>%
+  mutate(INCM24 = as.numeric(INCM24)) %>%
+  group_by(ICPSR_CHILDID) %>%
+  ggplot(aes(x = HOMESTIM_24, y = ASQTOTAL_24, color = INCM24)) +
+  geom_point() +
+  labs(title = "Lower Incidence of Behavioral Problems at 24 Months in \n Higher-Stimulation, Higher-Income Homes",
+       x = "STIM-Q Cognitive Home Environment Stimulation Score", 
+       y = "ASQ Score for Social Development",
+       color = "Income Index")
+
+homestim_social_dev_24
+```
+
+# Mean Length of Utterances vs. Home Environment Stimulation 
+```{r}
+mlu_homestim_24 <- raw_data %>%
+  select(ICPSR_CHILDID, HOMESTIM_24, MLU24) %>%
+  group_by(ICPSR_CHILDID) %>%
+  ggplot(aes(x = HOMESTIM_24, y = MLU24)) +
+  geom_point() +
+  labs(title = "More Stimulating Home Environment Associated with Increase in 
+       Mean Length of Utterances at 24 Months",
+       x = "STIM-Q Cognitive Home Environment Stimulation Score", 
+       y = "Mean Length of Child's Utterances")
+
+mlu_homestim_24
+```
+
+```{r}
+mlu_homestim_income_24 <- raw_data %>%
+  select(ICPSR_CHILDID, HOMESTIM_24, MLU24, INCM24) %>%
+  filter(!is.na(INCM24)) %>%
+  mutate(INCM24 = as.numeric(INCM24),
+         INCM24 = case_when(INCM24 %in% 1:5 ~ "Under $50,000",
+                            INCM24 %in% 6:10 ~ "$50,000-100,000",
+                            INCM24 %in% 11 ~ "$100,000-150,000",
+                            INCM24 %in% 12 ~ "$150,000-200,000",
+                            INCM24 %in% 13 ~ "Over $200,000"),
+        INCM24 = fct_relevel(INCM24, c("Under $50,000", "$50,000-100,000", "$100,000-150,000", "$150,000-200,000", "Over $200,000"))) %>%
+  group_by(ICPSR_CHILDID) %>%
+  ggplot(aes(x = HOMESTIM_24, y = MLU24)) +
+  geom_point() +
+  facet_wrap(~ INCM24) +
+  labs(title = "Greater Home Environment Stimulation and Mean Length of Utterances
+       in Higher-Income Homes",
+       x = "STIM-Q Cognitive Home Environment Stimulation Score", 
+       y = "Mean Length of Child's Utterances")
+
+mlu_homestim_income_24
+```
+
 
